# hos

./: CMakeLists.txt  HuygensOnSpeed.sln  README.md  README.txt  TODO.txt
HuygensOnSpeed/: CMakeLists.txt  ComplexAbsKernel.cu  Coordinate.h  CudaIncludes.h  CudaUtils.cpp  CudaUtils.h  Defines.h  Dimension.h  DisplayKernel.cu  DisplayResponse.cu  DisplayResponse.h  DisplayResponseCPU.cpp  DisplayResponseCPU.h  GroupSource.cpp  GroupSource.h  HuygensCuComplex.cpp  HuygensCuComplex.h  HuygensKernel.cu  HuygensOnCPU.cpp  HuygensOnCPU.h  HuygensOnGPU.cu  HuygensOnGPU.h  HuygensOnSpeed.vcproj  HuygensSimulator.cpp  HuygensSimulator.h  HuygensWrapper.cu  IDisplayResponse.h  IHuygensPrinciple.h  ISource.h  ObservationArea.cpp  ObservationArea.h  PaintTool.cpp  PaintTool.h  PointSource.cpp  PointSource.h  PulseEchoKernel.cu  Source.cpp  Source.h
HuygensOnSpeedGlutApp/: CMakeLists.txt  GlutCallbackFunctions.h  HuygensOnSpeed.cpp  HuygensOnSpeed.h  HuygensOnSpeedGlutApp.vcproj
MatlabInterface/: HOS_example.m  HOS_run.m  HuygensOnSpeed.cpp  MatlabInterface.vcproj  README.txt  buildMex.m  getObsCoords.m  getSimpleULA.m
MatlabInterface/cuda_4_2/: README.txt
cmake/: FindGLEW.cmake
